# dynamic_pricing_app

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py
model/: linear_regression.py  linear_regression_pricing_model.pkl
