# Poetry configs
[tool.poetry]
name = "dynamic_pricing_app"
version = "0.1.0"
description = ""
authors = ["Fátima Rosa <fatimamargarida_santos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
gradio = "^5.7.1"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configs
[tool.ruff.lint]
select = ['E', 'F', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff]
line-length = 120

# Vulture configs
[tool.vulture]
min_confidence = 80
paths=["."]

